# node-crc

./: .eslintrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  binding.gyp  build.js  build.sh  eslint.config.mjs  index.d.ts  index.js  index.node  jest.config.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: bench.js
benchmark/: benchmark.js
lib/: lib.d.ts  lib.js
src/: crc.c  lib.js  lib.rs  lib.ts
test/: mocha  test.js
tests/: tests.test.js  tests.test.ts
