[package]
name = "node-crc"
version = "3.0.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.61"
repository = "https://github.com/magiclen/node-crc"
homepage = "https://magiclen.org/node-js-crc/"
keywords = ["node.js", "crc8", "crc16", "crc32", "crc64"]
categories = []
description = "To compute CRC values by providing the length of bits, expression, reflection, an initial value and a final xor value. It has many built-in CRC functions."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
napi = "2"
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[dependencies.crc-any]
version = "2"
default-features = false
features = ["heapless"]